Adicionada a função para movimentar os ponteiros

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Um Relógio Analógico, porém digital</title>
-    <link rel="stylesheet" href="/relogio_de_ponteiro_js/css/style.css" type="text/css" media="all">
-    <script src="/relogio_de_ponteiro_js/js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
