--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Um Relógio Analógico, porém digital</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
-    <script src="/js/script.js" defer></script>
+    <script src="relogio_de_ponteiro_js/js/script.js " defer></script>
 </head>
 
 <body>
